# AgentFactory

./: .env.example  .gitignore  docker-compose.yml
.atl/: .skill-registry.cache.json  skill-registry.md
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 3e06828f71d5_initial_all_core_tables.py
backend/app/: config.py  database.py  main.py
backend/app/adapters/: __init__.py  base.py  deepseek.py  factory.py  mock.py
backend/app/api/: __init__.py  runs.py
backend/app/auth/: __init__.py  dependencies.py  jwt.py  routes.py
backend/app/git/: __init__.py  bitbucket.py  github.py  gitlab.py  provider.py
backend/app/guards/: __init__.py  secret_scan.py
backend/app/models/: __init__.py  artifact.py  base.py  event.py  git_credential.py  phase.py  run.py  team.py  ticket.py  user.py
backend/app/orchestrator/: __init__.py  gates.py  orchestrator.py  scope_guard.py  state_machine.py
backend/app/orchestrator/roles/: __init__.py  design.py  develop.py  intake.py  pr_agent.py  review.py  spec.py  tasks.py  verify.py
backend/app/schemas/: auth.py  runs.py
backend/tests/: __init__.py  conftest.py  test_gates.py  test_pipeline.py
docs/: architecture.md  roles.md  setup.md
frontend/: DESIGN_SYSTEM.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
frontend/designs/: dashboard.pen
frontend/src/: App.tsx  main.tsx
frontend/src/components/: BudgetTracker.tsx  EvidencePanel.tsx  Layout.tsx  (+3 more)
openspec/: config.yaml
(+19 files in other folders)
